Implemented installer for Windows, MacOS, Linux